# SAIR-Math-Distillation

./: .env.example  .gitignore  FINDINGS.md  README.md  pyproject.toml
analysis/: README.md  RESULTS.md  RESULTS_AUTO.md  _common.py  aggregate.py  aj_checker.py  arjun_garg_checker.py  build_bank_lookup.py  cascade_v14.py  dufius_checker.py  eucalyptus_checker.py  eval_bank_lookup_v5.py  eval_checker_full.py  eval_with_counterex.py  magma_counterexamples.py  magma_mining.py  parse_equation.py  pi_checker.py  procedural_v2_checker.py  reza_jamei_checker.py  vt_checker.py  yan-biao_checker.py
analysis/results/: COMPARISON.json
analysis/results/aj/: SUMMARY.md  evaluation_extra_hard.json  evaluation_hard.json  evaluation_normal.json  evaluation_order5.json  full_etp.json  hard.json  hard1.json  hard2.json  hard3.json  normal.json  summary.json
analysis/results/arjun_garg/: SUMMARY.md  evaluation_extra_hard.json  evaluation_hard.json  evaluation_normal.json  evaluation_order5.json  (+7 more)
cheatsheets/: aj.txt  arjun_garg.txt  bank_lookup_v5.txt  dufius.txt  eucalyptus.txt  example.txt  pi.txt  reza_jamei.txt  vt.txt  yan-biao.txt
config/: default.yaml
data/: README.md
data/sair_eval/: evaluation_extra_hard.jsonl  evaluation_hard.jsonl  evaluation_normal.jsonl  evaluation_order5.jsonl
old_results/: PREVIOUS_README.md  README.md  SAIR_HF_EVAL_FINDINGS.md  v10b_evaluation_extra_hard_rule_breakdown.json  v10b_hard3_rule_breakdown.json
src/eq_playground/: cheatsheet.py  cli.py  config.py  datasets.py  llm.py  metrics.py  parser.py  problems.py  report.py  runner.py
(+72 files in other folders)
