[project]
name = "eq-playground"
version = "0.1.0"
description = "Programmatic baselines for the SAIR Mathematics Distillation Challenge - Equational Theories"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.20",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["analysis"]
